--- a/app/views/search.html
+++ b/app/views/search.html
@@ -30,5 +30,4 @@
     </div>
 </div>
 
-
-<div ng-include="'search-modal.html'" ></div>
+<div search-modal modal-data="search.modal" switch-to-swipe="search.switchToSwipe" tweet-modal-show="root.tweetModalShow"></div>
