Add closing modal behavior on click and escape key

--- a/app/views/search-modal.html
+++ b/app/views/search-modal.html
@@ -1,4 +1,4 @@
-<div ng-class="{'modal-wrapper':  true, 'modal-show': tweetModalShow}">
+<div ng-click="closeModal($event)" ng-class="{'modal-wrapper':  true, 'modal-show': tweetModalShow}">
     <div ng-show="tweetModalShow" class="tweet tweet-modal">
     	<div class="top-metadata">
     		<img class="avatar" 
