--- a/app/views/status.html
+++ b/app/views/status.html
@@ -57,10 +57,15 @@
         	<div class="action-favor">
         		<button class="favor" />	
         	</div>
-        	<div class="action-more">
+        	<div ng-click="toggleShowMoreAction()" class="action-more">
         		<i class="fa fa-circle"></i>
         		<i class="fa fa-circle"></i>
         		<i class="fa fa-circle"></i>
+                <div ng-show="showMoreAction" class="more-actions">
+                    <ul>
+                        <li><a class="copy-link" data-ng-click="openSingleTweet(data.id_str)">Open this single tweet</a></li>
+                    </ul>
+                </div>
         	</div>
         </div>
 
